Update to Java 22
Update to Java 22 so we can use the stable version of the Java FFI.
Regenerate bindings using the jextract version targetting Java 22
and update code to use the new APIs.

Signed-off-by: Aram Hăvărneanu <aram@mgk.ro>